--- a/subjects.html
+++ b/subjects.html
@@ -135,7 +135,7 @@
     <script>
         const { createApp, ref, onMounted } = Vue;
 
-        // 🌟 أيقونات 3D عالية الجودة (جبتلك لينكات جديدة ونضيفة)
+        // 🌟 أيقونات 3D عالية الجودة
         const IMGS = {
             "عرب": "https://cdn-icons-png.flaticon.com/512/330/330459.png", // علم
             "لغة عربية": "https://cdn-icons-png.flaticon.com/512/10605/10605973.png", // كتاب عربي
@@ -198,4 +198,5 @@
         }).mount('#app');
     </script>
 </body>
-</html>
+                </html>
+    
